testing new fix for flicker

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -401,9 +401,9 @@ footer ul {
     height: unset;
   }
 
-  /* footer:not(.footer-home) {
+  footer:not(.footer-home) {
     position: unset;
-  } */
+  }
 
   h2 {
     font-size: 1.3rem;
